# scaffold

./: .gitignore  ADR.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOGFOODING.md  FURPS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  rate-limit-allowlist.txt
.github/workflows/: pr-rate-limit.yml  publish-crate.yml  template-e2e.yml
docs/: basecamp-module-requirements.md
skills/basecamp/: SKILL.md
skills/lez-framework-template/: SKILL.md
skills/lez-template/: SKILL.md
skills/lgs-cli/: SKILL.md
skills/spel-template/: SKILL.md
src/: circuits.rs  cli.rs  cli_help.rs  config.rs  constants.rs  doctor_checks.rs  error.rs  hash.rs  lez_layout.rs  lib.rs  migrate.rs  model.rs  process.rs  project.rs  repo.rs  sequencer_config.rs  state.rs  testnode.rs
src/api/: error.rs  mod.rs  testnode.rs
src/commands/: basecamp.rs  build.rs  client.rs  deploy.rs  doctor.rs  idl.rs  init.rs  localnet.rs  mod.rs  new.rs  report.rs  run.rs  run_state.rs  self_test.rs  setup.rs  spel.rs  testnode.rs  wallet.rs  wallet_support.rs
src/template/: copy.rs  mod.rs  project.rs  skills.rs
src/testnode/: accounts.rs  blocks.rs  client.rs  mod.rs  pins.rs  state.rs  test_support.rs
templates/default/: .env.local  Cargo.toml.template  README.md
templates/lez-framework/: Cargo.toml.template  README.md
templates/lez-framework/crates/lez-client-gen/: Cargo.toml.template
templates/lez-framework/methods/guest/: Cargo.toml.template
templates/lez-framework/src/: lib.rs
tests/: cli.rs  testnode_api.rs
tests/common/: test_node.rs
(+1 files in other folders)
