[package]
name = "logos-scaffold"
version = "0.1.1"
description = "Rust CLI for bootstrapping LSSA program_deployment projects in standalone mode"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/logos-co/logos-scaffold"
rust-version = "1.81"
include = [
  "/src/**",
  "/templates/**",
  "/templates/**/.*",
  "/tests/**",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE-*",
]

[[bin]]
name = "logos-scaffold"
path = "src/bin/logos-scaffold.rs"

[[bin]]
name = "lgs"
path = "src/bin/lgs.rs"

[dependencies]
anyhow = "1.0"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
include_dir = "0.7.4"
indicatif = "0.17"
flate2 = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
tar = "0.4.44"
tempfile = "3.18.0"
thiserror = "2.0"
toml_edit = "0.22"
ureq = { version = "2.12", features = ["json"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
